media query for tablet size

--- a/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
+++ b/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
@@ -198,3 +198,9 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/* tablets smartphones */
+@media screen and (max-width: 942px){
+    header {
+        background: #0072bb;
+    }
+}
