add media query for larger smartphones

--- a/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
+++ b/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
@@ -204,3 +204,9 @@ p {
         background: #0072bb;
     }
 }
+/* large smartphones*/
+@media screen and (max-width:740px){
+    nav {
+        background-color: #0072bb;
+    }
+}
