added media query for small smartphones

--- a/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
+++ b/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
@@ -210,3 +210,9 @@ p {
         background-color: #0072bb;
     }
 }
+/* small smartphones*/
+@media screen and (max-width:520px){
+    .sample-img {
+        background-color: #0072bb;
+    }
+}
