--- a/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
+++ b/Homework/01-HTML-Git-CSS/02-Homework/Develop/assets/css/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     margin: 0;
 }
-
+/*background colour of body*/
 body {
     background-color: #d9dcd6;
 }
-
+/*properties of header*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -133,7 +133,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*adding padding and styling*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
